Toggle Button Added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
+   
     <nav id="desktop-nav">
       <div class="logo">Latif Beheshti</div>
       <div>
@@ -19,6 +20,8 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
+      <input type="checkbox" class="toggle-button" id="check">
+      <label for="check" class="button"></label>
     </nav>
     <nav id="hamburger-nav">
       <div class="logo">Latif Beheshti</div>
@@ -365,10 +368,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a
-              href="www.linkedin.com/in/abdul-latif-beheshti"
-              >LinkedIn</a
-            >
+            <a href="www.linkedin.com/in/abdul-latif-beheshti">LinkedIn</a>
           </p>
         </div>
       </div>
